--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,12 @@
-authors = ["Fons van der Plas <fonsvdplas@gmail.com>", "Mikołaj Bochenski <iceflamecode@gmail.com>"]
 name = "Saturn"
 uuid = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
-version = "0.1.0"
 license = "MIT"
+authors = ["Fons van der Plas <fonsvdplas@gmail.com>", "Mikołaj Bochenski <iceflamecode@gmail.com>"]
+version = "0.1.0"
 
 [deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+Pages = "7c165e09-dada-5b64-9fdc-39b801c58527"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
