✍ Renamed to Pluto.jl

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Saturn"
+name = "Pluto"
 uuid = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 license = "MIT"
 authors = ["Fons van der Plas <fonsvdplas@gmail.com>", "Mikołaj Bochenski <iceflamecode@gmail.com>"]
