📦 Version info and packge compatability

--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,11 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 Pages = "7c165e09-dada-5b64-9fdc-39b801c58527"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+
+[compat]
+HTTP = "≥0.8.8"
+JSON = "^0.21"
+Pages = "^0.3"
+julia = "^1.0.5"
