--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -1,10 +1,18 @@
+# This is a basic workflow to help you get started with Actions
+
 name: TagBot
+
+# Controls when the action will run. Triggers the workflow on push or pull request 
+# events but only for the master branch
 on:
-  schedule:
-    - cron: 0 * * * *
+  push:
+    branches: [ master ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   TagBot:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest]
     steps:
       - uses: JuliaRegistries/TagBot@v1
         with:
