--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -2,7 +2,11 @@ name: Run Julia tests
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on: [push, pull_request]
+on:
+    push:
+        paths-ignore: "frontend/**"
+    pull_request:
+        paths-ignore: "frontend/**"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
