--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,4 +1,4 @@
-name: Run Julia tests
+name: Pluto backend tests
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
