--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -17,16 +17,26 @@ jobs:
     # This workflow contains a single job called "test"
     test:
         runs-on: ${{ matrix.os }}
+        continue-on-error: ${{ matrix.experimental }}
         strategy:
             matrix:
-                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "v1.5.0-rc1"]
+                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4"]
                 os: [ubuntu-latest, windows-latest]
+                experimental: [false]
                 include:
                     # macOS - only the most risky
                     - julia-version: "1.0"
                       os: macOS-latest
+                      experimental: false
                     - julia-version: "v1.5.0-rc1"
                       os: macOS-latest
+                      experimental: true
+                    - julia-version: "v1.5.0-rc1"
+                      os: windows-latest
+                      experimental: true
+                    - julia-version: "v1.5.0-rc1"
+                      os: ubuntu-latest
+                      experimental: true
 
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
