--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "target": "esnext",
-        "module": "esnext",
-        "moduleResolution": "node",
-        "lib": ["es2017", "dom"],
+        "target": "ES6",
+        // "module": "ES6",
+        // "moduleResolution": "Classic",
+        "lib": ["dom", "DOM"],
         "allowJs": true,
         "checkJs": true,
         "noEmit": true,
