Plots and PlutoUI added

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 1234
 VOLUME /notebooks
 
 ENV JULIA_NUM_THREADS = 100
-RUN julia -e 'using Pkg; Pkg.update(); Pkg.add("Pluto"); Pkg.precompile();'
+RUN julia -e 'using Pkg; Pkg.update(); Pkg.add(["Pluto", "PlutoUI", "Plots"]); Pkg.precompile();'
 
 COPY docker_main.jl /
 WORKDIR /notebooks
