--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -20,14 +20,14 @@ jobs:
         # continue-on-error: true
         strategy:
             matrix:
-                # We test quite a lot of versions, but we do some OS and version specific things unfortunately
-                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "v1.5.0-rc1"]
+                # We test quite a lot of versions because we do some OS and version specific things unfortunately
+                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "1.5"]
                 os: [ubuntu-latest, windows-latest]
                 include:
                     # macOS - only the extremes, linux and windows cover pretty much everything already i think
                     - julia-version: "1.0"
                       os: macOS-latest
-                    - julia-version: "v1.5.0-rc1"
+                    - julia-version: "1.5"
                       os: macOS-latest
 
         steps:
