--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -5,14 +5,11 @@
 
 name: TagBot
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
     schedule:
-        # every day
-        - cron: "0 0 * * *"
+        # every hour
+        - cron: "0 * * * *"
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     TagBot:
         runs-on: [ubuntu-latest]
