--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
     "prettier.printWidth": 160,
     "prettier.tabWidth": 4,
     "prettier.semi": false,
-    "prettier.quoteProps": "consistent",
-    "julia.environmentPath": "/home/codespace/workspace/Pluto.jl"
+    "prettier.quoteProps": "consistent"
 }
