--- a/.github/workflows/FrontendTest.yml
+++ b/.github/workflows/FrontendTest.yml
@@ -34,17 +34,18 @@ jobs:
 
             - name: Install Chrome dependencies
               run: |
-                apt-get update 
+                apt-get update
+                apt-get -y install sudo
                 # See https://crbug.com/795759
-                apt-get install -yq libgconf-2-4
+                sudo apt-get install -yq libgconf-2-4
                 # Install latest chrome dev package, which installs the necessary libs to
                 # make the bundled version of Chromium that Puppeteer installs work.
-                apt-get install -y wget --no-install-recommends
-                wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-                sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-                apt-get update
-                apt-get install -y google-chrome-stable --no-install-recommends
-                rm -rf /var/lib/apt/lists/*
+                sudo apt-get install -y wget --no-install-recommends
+                wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+                sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+                sudo apt-get update
+                sudo apt-get install -y google-chrome-stable --no-install-recommends
+                sudo rm -rf /var/lib/apt/lists/*
 
             - name: Install dependencies
               working-directory: ./test/frontend
