--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -22,13 +22,11 @@ jobs:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
                 julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "1.5"]
-                os: [ubuntu-latest, windows-latest]
-                include:
-                    # macOS - only the extremes, linux and windows cover pretty much everything already i think
-                    - julia-version: "1.0"
-                      os: macOS-latest
-                    - julia-version: "1.5"
-                      os: macOS-latest
+                os: [ubuntu-latest, windows-latest, macOS-latest]
+                exclude:
+                    # macOS and windows - only the extremes, linux covers pretty much everything already i think
+                    - julia-version: ["1.1", "1.2", "1.3", "1.4"]
+                      os: [macOS-latest, windows-latest]
 
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
