--- a/.github/workflows/FrontendTest.yml
+++ b/.github/workflows/FrontendTest.yml
@@ -58,7 +58,15 @@ jobs:
               working-directory: ./test/frontend
               run: |
                   julia --project=$GITHUB_WORKSPACE -e "import Pluto; Pluto.run(port=$PLUTO_PORT, require_secret_for_access=false)" & # Run Pluto.jl server in the background
-                  sleep 10 # Wait for Pluto to initialize
+
+                  # Wait for Pluto to initialize
+                  TIMES_TRIED=0
+                  until [ $TIMES_TRIED -eq 60 ] || $(curl --output /dev/null --silent --fail "http://localhost:$PLUTO_PORT/"); do
+                      printf '.'
+                      TIMES_TRIED=$((TIMES_TRIED+1))
+                      sleep 1
+                  done
+
                   npm run test
               env:
                   PLUTO_PORT: 1235
