--- a/Project.toml
+++ b/Project.toml
@@ -24,9 +24,8 @@ MsgPack = "1.1"
 julia = "^1.0.0"
 
 [extras]
-JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Random", "JSON"]
+test = ["Test", "Random"]
