--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ julia = "^1.0.0"
 [extras]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [targets]
-test = ["Test", "Random"]
+test = ["Test", "Random", "DataFrames"]
