--- a/Project.toml
+++ b/Project.toml
@@ -26,9 +26,10 @@ Tables = "1"
 julia = "^1.0.0"
 
 [extras]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [targets]
-test = ["Test", "Random", "DataFrames"]
+test = ["Test", "Random", "DataFrames", "OffsetArrays"]
