--- a/.github/workflows/TestWindowsLaunch.yml
+++ b/.github/workflows/TestWindowsLaunch.yml
@@ -26,7 +26,7 @@ jobs:
 
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-            # - uses: actions/checkout@v2
+            - uses: actions/checkout@v2
 
             # Makes thes `julia` command available
             - uses: julia-actions/setup-julia@v1
