--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
 FuzzyCompletions = "0.3,0.4"
-HTTP = "0.8.18 - 0.9.0"
+HTTP = "0.8.18,= 0.9.0"
 MsgPack = "1.1"
 Tables = "1"
 julia = "^1.0.4"
