--- a/.github/workflows/TestWindowsLaunch.yml
+++ b/.github/workflows/TestWindowsLaunch.yml
@@ -22,7 +22,7 @@ jobs:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
                 julia-version: ["1.5"]
-                os: [windows-latest]
+                os: [windows-latest, ubuntu-latest]
 
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
