--- a/.github/workflows/TestWindowsLaunch.yml
+++ b/.github/workflows/TestWindowsLaunch.yml
@@ -21,7 +21,7 @@ jobs:
         strategy:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
-                julia-version: ["1.5"]
+                julia-version: ["1.0", "1.5"]
                 os: [windows-latest, ubuntu-latest]
 
         steps:
