--- a/.github/workflows/TestWindowsLaunch.yml
+++ b/.github/workflows/TestWindowsLaunch.yml
@@ -1,16 +1,8 @@
-name: Windows launch test
+name: Launch test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on:
-    push:
-        paths-ignore:
-            - "frontend/**"
-            - "**.md"
-    pull_request:
-        paths-ignore:
-            - "frontend/**"
-            - "**.md"
+on: workflow_dispatch
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
