--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,8 @@
-name = "Pluto"
-uuid = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+name = "Neptune"
+uuid = "6741aa20-66dc-42c8-a8ae-3740631035cd"
 license = "MIT"
-authors = ["Fons van der Plas <fonsvdplas@gmail.com>"]
-version = "0.12.17"
+authors = ["David Eldeman & Fons van der Plas compleathorseplayer@gmail.com"]
+version = "0.1"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
