--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ HTTP = "0.8.18,0.9"
 MsgPack = "1.1"
 Tables = "1"
 julia = "^1.0.4"
+TableIOInterface = "0.1"
 
 [extras]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
