--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -1,4 +1,4 @@
-# This GitHub action checks daily whether a new version of this package
+# This GitHub action checks whether a new version of this package
 # has been registred in the official registry.
 # If so, it creates a new _release_:
 # https://github.com/fonsp/Pluto.jl/releases
@@ -6,11 +6,13 @@
 name: TagBot
 
 on:
-    schedule:
-        # every hour
-        - cron: "0 * * * *"
+  issue_comment:
+    types:
+      - created
+  workflow_dispatch:
 
 jobs:
+    if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot'
     TagBot:
         runs-on: [ubuntu-latest]
         steps:
