💸 Only run tests on master or PR

--- a/.github/workflows/FrontendTest.yml
+++ b/.github/workflows/FrontendTest.yml
@@ -6,6 +6,8 @@ on:
     push:
         paths-ignore:
             - "**.md"
+        branches:
+            - master
     pull_request:
         paths-ignore:
             - "**.md"
