--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -7,6 +7,8 @@ on:
         paths-ignore:
             - "frontend/**"
             - "**.md"
+        branches:
+            - master
     pull_request:
         paths-ignore:
             - "frontend/**"
