--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -23,17 +23,17 @@ jobs:
         strategy:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
-                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "1.5"]
+                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "1.5", "1.6"]
                 os: [ubuntu-latest]
                 include:
                     # macOS and windows - only the extremes, linux covers pretty much everything already i think
                     - julia-version: "1.0"
                       os: macOS-latest
-                    - julia-version: "1.5"
+                    - julia-version: "1.6"
                       os: macOS-latest
                     - julia-version: "1.0"
                       os: windows-latest
-                    - julia-version: "1.5"
+                    - julia-version: "1.6"
                       os: windows-latest
 
         steps:
