--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -3,6 +3,7 @@ name: Pluto backend tests
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
+    workflow_dispatch:
     push:
         paths-ignore:
             - "frontend/**"
