--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,6 +9,7 @@ on:
             - "**.md"
         branches:
             - master
+            - release-14.0.0
     pull_request:
         paths-ignore:
             - "frontend/**"
