bug fixed and tests added

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ test/frontend/node_modules
 test/frontend/artefacts/*
 !test/frontend/artefacts/.gitkeep
 .DS_Store
+
+Manifest.toml
+.vscode/settings.json
