--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
 FuzzyCompletions = "0.3,0.4"
-HTTP = "0.8.18,0.9"
+HTTP = "0.8,0.9,^0.9.2"
 MsgPack = "1.1"
 TableIOInterface = "0.1"
 Tables = "1"
