--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,9 @@ version = "0.15.1"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
-Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
+CommonMacro = "b6f56e51-512f-4970-bf40-959278bba4cc"
+CommonMark = "a80b9123-70ca-4bc0-993e-6e3bcb318db6"
+Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FileWatching = "7b1f6079-737a-58dc-b8bc-7a2ca5c1b5ee"
@@ -18,6 +20,7 @@ Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 MsgPack = "99f44e22-a591-53d1-9472-aa23ef4bd671"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
+Rebugger = "ee283ea6-eecd-56e3-beb3-83eb4d3c31e9"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 TableIOInterface = "d1efa939-5518-4425-949f-ab857e148477"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
