--- a/.github/workflows/FrontendTest.yml
+++ b/.github/workflows/FrontendTest.yml
@@ -1,13 +1,13 @@
 name: Pluto frontend tests
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# events but only for the main branch
 on:
     push:
         paths-ignore:
             - "**.md"
         branches:
-            - master
+            - main
     pull_request:
         paths-ignore:
             - "**.md"
