--- a/.github/workflows/LaunchTest.yml
+++ b/.github/workflows/LaunchTest.yml
@@ -1,7 +1,7 @@
 name: Launch test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# events but only for the main branch
 on: workflow_dispatch
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
