--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -24,7 +24,7 @@ jobs:
         strategy:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
-                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "1.5", "^1.6.0-0"]
+                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "1.5", "1.6"]
                 os: [ubuntu-latest]
                 include:
                     # macOS and windows - only the extremes, linux covers pretty much everything already i think
