--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "module": "ES2020",
-        "lib": ["ES2020", "DOM"],
+        "lib": ["ES2020", "DOM", "WebWorker"],
         "allowJs": true,
         "checkJs": true,
         "noEmit": true,
