--- a/.github/workflows/ReleaseBinder.yml
+++ b/.github/workflows/ReleaseBinder.yml
@@ -13,5 +13,5 @@ jobs:
           curl \
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/fonsp/pluto-on-binder/dispatches \
-            -d '{"event_type":"hello friend"}'
+            https://api.github.com/repos/fonsp/action-test-tag/dispatches \
+            -d '{"event_type":"release_pluto"}'
