--- a/.github/workflows/ReleaseBinder.yml
+++ b/.github/workflows/ReleaseBinder.yml
@@ -12,6 +12,7 @@ jobs:
       - run: |
           curl \
             -X POST \
+            -u "${{ secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/fonsp/action-test-tag/dispatches \
             -d '{"event_type":"release_pluto"}'
