--- a/.github/workflows/FrontendTest.yml
+++ b/.github/workflows/FrontendTest.yml
@@ -8,6 +8,7 @@ on:
             - "**.md"
         branches:
             - main
+            - Fix-front-end-tests
     pull_request:
         paths-ignore:
             - "**.md"
