--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Pluto"
 uuid = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 license = "MIT"
-authors = ["Fons van der Plas <fonsvdplas@gmail.com>"]
+authors = ["Fons van der Plas <fons@plutojl.org>"]
 version = "0.14.5"
 
 [deps]
