--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -25,7 +25,7 @@ jobs:
         strategy:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
-                julia-version: ["1.5", "1.6"]
+                julia-version: ["1.5", "1.6", "nightly"]
                 os: [ubuntu-latest, macOS-latest, windows-latest]
 
         steps:
