--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -39,3 +39,4 @@ jobs:
 
             # 🚗
             - uses: julia-actions/julia-runtest@v1
+              continue-on-error: ${{ matrix.julia-version == 'nightly' }}
