--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -25,18 +25,8 @@ jobs:
         strategy:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
-                julia-version: ["1.0", "1.1", "1.2", "1.3", "1.4", "1.5", "1.6"]
-                os: [ubuntu-latest]
-                include:
-                    # macOS and windows - only the extremes, linux covers pretty much everything already i think
-                    - julia-version: "1.0"
-                      os: macOS-latest
-                    - julia-version: "^1.6.0-0"
-                      os: macOS-latest
-                    - julia-version: "1.0"
-                      os: windows-latest
-                    - julia-version: "^1.6.0-0"
-                      os: windows-latest
+                julia-version: ["1.5", "1.6", "nightly"]
+                os: [ubuntu-latest, macOS-latest, windows-latest]
 
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -49,3 +39,4 @@ jobs:
 
             # 🚗
             - uses: julia-actions/julia-runtest@v1
+              continue-on-error: ${{ matrix.julia-version == 'nightly' }}
