--- a/Project.toml
+++ b/Project.toml
@@ -6,8 +6,7 @@ version = "0.15.1"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
-CommonMark = "a80b9123-70ca-4bc0-993e-6e3bcb318db6"
-Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
+Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FileWatching = "7b1f6079-737a-58dc-b8bc-7a2ca5c1b5ee"
