--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ test/frontend/artifacts/*
 !test/frontend/artifacts/.gitkeep
 .DS_Store
 
+frontend-dist
 node_modules
 .parcel-cache
 frontend/dist
