--- a/frontend-bundler/package.json
+++ b/frontend-bundler/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "@parcel/config-default": "^2.0.0",
+        "mkdirp": "^1.0.4",
         "parcel": "^2.0.0"
     }
 }
