--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -5,6 +5,7 @@ on:
         paths:
             - "frontend"
             - "frontend-bundler"
+            - ".github/workflows/Bundle.yml"
         branches:
             - bundled
     workflow_dispatch:
