--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -18,6 +18,8 @@ jobs:
             - uses: actions/setup-node@v1
               with:
                   node-version: 17.x
+            - run: npm install
+              working-directory: frontend-bundler
             - name: The Actual Build
               working-directory: frontend-bundler
               run: npm run build
