--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -20,19 +20,13 @@ jobs:
                   node-version: 17.x
             - run: npm install
               working-directory: frontend-bundler
-            - run: parcel --version
-              working-directory: frontend-bundler
             - name: The Actual Build
               working-directory: frontend-bundler
               run: npm run build
-              # - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
-              #     with:
-              #         add: 'frontend-dist'
-              #         branch: release
-              #         # Arguments for the git pull command. Use NO-PULL to avoid the action pulling at all.
-              #         # Default: '--no-rebase'
-              #         # pull: 'NO-PULL or --rebase --autostash ...'
-
-              #         # Whether to push the commit and, if any, its tags to the repo. It can also be used to set the git push arguments (see the paragraph below for more info)
-              #         # Default: true
-              #         push: false
+            - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
+              with:
+                  add: "frontend-dist"
+                  branch: release
+                  # Arguments for the git pull command. Use NO-PULL to avoid the action pulling at all.
+                  # Default: '--no-rebase'
+                  # pull: 'NO-PULL or --rebase --autostash ...'
