--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -7,6 +7,8 @@ on:
     push:
         paths-ignore:
             - "frontend/**"
+            - "frontend-bundler/**"
+            - "frontend-dist/**"
             - "**.md"
         branches:
             - main
