--- a/frontend-bundler/.parcelrc
+++ b/frontend-bundler/.parcelrc
@@ -3,5 +3,17 @@
     "resolvers": [
         "parcel-resolver-like-a-browser",
         "..."
-    ]
+    ],
+    "transformers": {
+        "*.svg": [
+            "...",
+            "@parcel/transformer-inline-string"
+        ]
+    },
+    "optimizers": {
+        "*.svg": [
+            "...",
+            "@parcel/optimizer-data-url"
+        ]
+    }
 }
