--- a/frontend-bundler/package.json
+++ b/frontend-bundler/package.json
@@ -5,10 +5,9 @@
     ],
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
         "start": "cd ../frontend && parcel --dist-dir ../frontend-dist --config ../frontend-bundler/.parcelrc editor.html index.html error.jl.html sample.html",
-        "build": "cd ../frontend && parcel build --dist-dir ../frontend-dist --config ../frontend-bundler/.parcelrc --no-optimize editor.html index.html error.jl.html sample.html",
+        "build": "cd ../frontend && parcel build --dist-dir ../frontend-dist --config ../frontend-bundler/.parcelrc editor.html index.html error.jl.html sample.html",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -16,6 +15,11 @@
     "dependencies": {
         "@parcel/config-default": "^2.0.0",
         "mkdirp": "^1.0.4",
-        "parcel": "^2.0.0"
+        "parcel": "^2.0.0",
+        "parcel-resolver-like-a-browser": "file:../frontend-bundler/parcel-resolver-like-a-browser"
+    },
+    "devDependencies": {
+        "@parcel/optimizer-data-url": "^2.0.0",
+        "@parcel/transformer-inline-string": "^2.0.0"
     }
 }
