Fix quotes (consistently\!)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "prettier.tabWidth": 4,
     "prettier.semi": false,
     "prettier.quoteProps": "consistent",
+    "prettier.singleQuote": false,
     "julia.format.calls": false,
     "julia.format.comments": false,
     "julia.format.curly": false,
